<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:scrollbarSize="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:text="@string/adi_power_system"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="Expression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:text="@string/plate_9"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btn_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/plate_10"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btn_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/plate_11"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_10"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btn_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plate_13"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_11"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btn_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plate_19"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_17"
        app:layout_constraintTop_toBottomOf="@+id/btn_10" />

    <Button
        android:id="@+id/btn_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/plate_17"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plate_23"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_21"
        app:layout_constraintTop_toBottomOf="@+id/btn_13" />

    <Button
        android:id="@+id/btn_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plate_21"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_19"
        app:layout_constraintTop_toBottomOf="@+id/btn_11" />

    <Button
        android:id="@+id/btn_it165"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/it165"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_it220"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_it120"
        app:layout_constraintTop_toBottomOf="@+id/btn_19" />

    <Button
        android:id="@+id/btn_it120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/it120"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_it165"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_17" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plus_symbol"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_it220"
        app:layout_constraintTop_toBottomOf="@+id/btn_23" />

    <Button
        android:id="@+id/btn_it220"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/it220"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_it165"
        app:layout_constraintTop_toBottomOf="@+id/btn_21" />

    <Button
        android:id="@+id/btn_sp18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sp18000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_sp22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sp15"
        app:layout_constraintTop_toBottomOf="@+id/btn_it165" />

    <Button
        android:id="@+id/btn_sp15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sp15000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_sp18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_it120" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mult_symbol"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sp22"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_sp22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sp22000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_mul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sp18"
        app:layout_constraintTop_toBottomOf="@+id/btn_it220" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Btn_brac"
        app:layout_constraintTop_toTopOf="@+id/Btn_brac" />

    <Button
        android:id="@+id/Btn_brac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bracket"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sp18" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/equal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/btn_mul" />

    <Button
        android:id="@+id/Button_05"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/Button_04"
        app:layout_constraintTop_toTopOf="@+id/Button_04" />

    <Button
        android:id="@+id/Button_01"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/Button_02"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="2"
        app:layout_constraintEnd_toStartOf="@+id/Button_03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button_01"
        app:layout_constraintTop_toTopOf="@+id/Button_01" />

    <Button
        android:id="@+id/Button_03"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="3"
        app:layout_constraintEnd_toStartOf="@+id/Button_04"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button_02"
        app:layout_constraintTop_toTopOf="@+id/Button_02" />

    <Button
        android:id="@+id/Button_04"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:text="4"
        app:layout_constraintStart_toEndOf="@+id/Button_03"
        app:layout_constraintStart_toStartOf="@+id/Button_09"
        app:layout_constraintTop_toTopOf="@+id/Button_03" />

    <Button
        android:id="@+id/Button_09"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="9"
        app:layout_constraintEnd_toStartOf="@+id/btn_11"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/btn_11"
        app:layout_constraintTop_toTopOf="@+id/Button_08" />

    <Button
        android:id="@+id/Button_08"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:text="8"
        app:layout_constraintStart_toEndOf="@+id/Button_07"
        app:layout_constraintStart_toStartOf="@+id/Button_03"
        app:layout_constraintTop_toTopOf="@+id/Button_07" />

    <Button
        android:id="@+id/Button_07"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:text="7"
        app:layout_constraintStart_toEndOf="@+id/Button_06"
        app:layout_constraintStart_toStartOf="@+id/Button_02"
        app:layout_constraintTop_toTopOf="@+id/Button_06" />

    <Button
        android:id="@+id/Button_06"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:text="6"
        app:layout_constraintStart_toStartOf="@+id/Button_01"
        app:layout_constraintTop_toBottomOf="@+id/Button_01" />

    <Button
        android:id="@+id/Button_00"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/Button_05"
        app:layout_constraintTop_toTopOf="@+id/Button_09" />

</androidx.constraintlayout.widget.ConstraintLayout>